<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_dtu_hd"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serialNo_activity_hddtu_menu"
                    android:textSize="20dip"/>

                <TextView
                    android:id="@+id/serialno_activity_hddtu_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="20dip"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dip"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hardwarever_activity_hddtu_menu"
                    android:textSize="20dip"
                    android:layout_marginTop="5dip"/>

                <TextView
                    android:id="@+id/hardwarever_activity_hddtu_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown"
                    android:textSize="20dip"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5dip"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dip">

        <Button
            android:id="@+id/connectdtu_activity_hddtu_menu"
            android:layout_width="150dip"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_green"
            android:text="@string/connectdtu_activity_hddtu_menu"/>

        <Button
            android:id="@+id/ResetDtu_activity_hddtu_menu"
            android:layout_width="150dip"
            android:layout_height="match_parent"
            android:layout_marginTop="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_red"
            android:text="@string/resetdtu_activity_hddtu_menu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paramgroup_activity_hddtu_menu"
            android:textSize="20dip"
            android:background="@drawable/shape_rectangle"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite"/>

        <ListView
            android:id="@+id/hddtu_menu_listview_parammenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>
</LinearLayout>